hphp/test/slow/coeffects/memo-3.php.expectf
Fatal error: This function requires a zoned context to be memoized using __Memoize(#KeyedByIC) or __MemoizeLSB(#KeyedByIC) in %s on line 3
